--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
     <title>Time</title>
 </head>
 
@@ -27,6 +26,7 @@
         </div>
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
